# tg-rag-wine-bot

./: README.md  pyproject.toml  qdrant.ipynb
src/rag_bot/: config.py  embeddings.py  main.py
src/rag_bot/tools/: add_wine_to_cart.py  search_wines_by_attributes.py  search_wines_by_query.py
